--- a/app/src/main/res/layout/fragment_text.xml
+++ b/app/src/main/res/layout/fragment_text.xml
@@ -5,8 +5,9 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/tv3"
+        android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:textSize="20sp"
         android:gravity="center" />
 </LinearLayout>
