--- a/app/src/main/res/layout/cardview_loadinfo_item.xml
+++ b/app/src/main/res/layout/cardview_loadinfo_item.xml
@@ -37,13 +37,31 @@
                 android:textSize="13sp"
                 />
 
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/cv_title_c"
-                android:text="cv_title_c"
-                android:textSize="13sp"
-                />
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/cv_title_c1"
+                    android:text="cv_title_d1"
+                    android:layout_marginRight="10dp"
+                    android:singleLine="true"
+                    android:textSize="13sp"
+                    />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:gravity="right"
+                    android:id="@+id/cv_title_c2"
+                    android:text="cv_title_d2"
+                    android:textSize="13sp"
+                    />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -70,8 +88,6 @@
                     android:textSize="13sp"
                     />
             </LinearLayout>
-
-
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
