--- a/app/src/main/res/layout/include_reload_result.xml
+++ b/app/src/main/res/layout/include_reload_result.xml
@@ -40,15 +40,15 @@
             android:layout_weight="1"
             android:orientation="vertical">
             <TextView
+                android:id="@+id/reload_barcode1_textview"
                 android:paddingTop="20dp"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="111111111111"
+                android:text="无条码"
                 android:gravity="center"/>
 
             <RadioButton
                 android:layout_marginTop="20dp"
-                android:layout_marginBottom="40dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="扫描条码一"
@@ -64,15 +64,15 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/reload_barcode2_textview"
                 android:paddingTop="20dp"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="111111111111"
+                android:text="无条码"
                 android:gravity="center"/>
 
             <RadioButton
                 android:layout_marginTop="20dp"
-                android:layout_marginBottom="40dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="扫描条码二"
@@ -82,4 +82,15 @@
         </LinearLayout>
 
     </LinearLayout>
+    <Button
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:id="@+id/reload_compare"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:text="比较"
+
+        />
 </LinearLayout>
