--- a/app/src/main/res/menu/menu_unloading.xml
+++ b/app/src/main/res/menu/menu_unloading.xml
@@ -8,6 +8,7 @@
         android:orderInCategory="70"
         android:title="@string/search_title"
         app:actionViewClass="android.support.v7.widget.SearchView"
+        android:visible="false"
         app:showAsAction="always" />
 
     <item
