--- a/app/src/main/res/layout/dialog_unload_calendar.xml
+++ b/app/src/main/res/layout/dialog_unload_calendar.xml
@@ -37,6 +37,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linenum_ly"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_gravity="center_vertical"
