--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -56,8 +56,7 @@
                 android:popupBackground="@drawable/popup_bg"
                 android:singleLine="true"
                 android:textColorHint="#d1c8ba"
-                android:textSize="15sp"
-                android:text="tcc" />
+                android:textSize="15sp" />
 
             <EditText
                 android:id="@+id/loginPasswordText"
@@ -71,8 +70,7 @@
                 android:inputType="textPassword"
                 android:singleLine="true"
                 android:textColorHint="#d1c8ba"
-                android:textSize="15sp"
-                android:text="123456" />
+                android:textSize="15sp" />
 
             <Button
                 android:id="@+id/loginbutton"
