--- a/app/src/main/res/layout/dialog_unload_calendar.xml
+++ b/app/src/main/res/layout/dialog_unload_calendar.xml
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
-            android:text="线别" />
+            android:text="产线" />
 
         <LinearLayout
             android:layout_width="0dp"
