--- a/app/src/main/res/menu/menu_line.xml
+++ b/app/src/main/res/menu/menu_line.xml
@@ -7,6 +7,7 @@
         android:icon="@android:drawable/ic_menu_search"
         android:orderInCategory="70"
         android:title="@string/search_title"
+        android:visible="false"
         app:actionViewClass="android.support.v7.widget.SearchView"
         app:showAsAction="always" />
 
