--- a/app/src/main/res/menu/menu_unloading.xml
+++ b/app/src/main/res/menu/menu_unloading.xml
@@ -31,4 +31,22 @@
         android:title="@string/clear_title"
         app:showAsAction="collapseActionView" />
 
+    <item
+        android:id="@+id/unload_name_sort"
+        android:orderInCategory="100"
+        android:title="@string/sort_name"
+        app:showAsAction="collapseActionView" />
+
+    <item
+        android:id="@+id/unload_cbatch_sort"
+        android:orderInCategory="100"
+        android:title="@string/sort_code"
+        app:showAsAction="collapseActionView" />
+
+    <item
+        android:id="@+id/unload_line_sort"
+        android:orderInCategory="100"
+        android:title="@string/sort_line"
+        app:showAsAction="collapseActionView" />
+
 </menu>
