--- a/app/src/main/res/menu/menu_unloading.xml
+++ b/app/src/main/res/menu/menu_unloading.xml
@@ -19,11 +19,11 @@
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/unload_cam"
-        android:icon="@mipmap/ic_camera_alt_white_24dp"
+        android:id="@+id/unload_print"
+        android:icon="@mipmap/ic_reorder_white_24dp"
         android:orderInCategory="90"
-        android:title="@string/cam_title"
-        android:visible="false"
+        android:title="@string/print"
+        android:visible="true"
         app:showAsAction="always" />
 
     <item
