--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -100,6 +100,15 @@
                 android:textColor="#ffffff"
                 android:textSize="15sp" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="@string/show_version"
+                android:textColor="@color/white"
+                android:id="@+id/textView"
+                android:layout_below="@+id/selectbutton"
+                android:layout_centerHorizontal="true" />
 
 
         </RelativeLayout>
