--- a/app/src/main/res/layout/fragment_set.xml
+++ b/app/src/main/res/layout/fragment_set.xml
@@ -79,9 +79,11 @@
         android:layout_marginTop="5dp"
         android:clickable="true"
         android:focusable="true"
+        android:id="@+id/ly_update"
         android:background="@drawable/layout_selector"
         >
         <TextView
+            android:id="@+id/app_version"
             android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
