--- a/app/src/main/res/menu/menu_loading.xml
+++ b/app/src/main/res/menu/menu_loading.xml
@@ -2,19 +2,27 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-    <item
-        android:id="@+id/load_search"
-        android:icon="@android:drawable/ic_menu_search"
-        android:orderInCategory="80"
-        android:title="@string/search_title"
-        app:actionViewClass="android.support.v7.widget.SearchView"
-        app:showAsAction="always" />
+    <!--<item-->
+        <!--android:id="@+id/load_search"-->
+        <!--android:icon="@android:drawable/ic_menu_search"-->
+        <!--android:orderInCategory="80"-->
+        <!--android:title="@string/search_title"-->
+        <!--app:actionViewClass="android.support.v7.widget.SearchView"-->
+        <!--app:showAsAction="always" />-->
 
     <item
         android:id="@+id/load_add"
         android:icon="@mipmap/ic_add_white_24dp"
         android:orderInCategory="90"
         android:title="@string/add_title"
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/load_print"
+        android:icon="@mipmap/ic_printer_white_24dp"
+        android:orderInCategory="90"
+        android:title="@string/print"
+        android:visible="true"
         app:showAsAction="always" />
 
     <item
