--- a/app/src/main/res/layout/product_adapter_item4.xml
+++ b/app/src/main/res/layout/product_adapter_item4.xml
@@ -7,6 +7,13 @@
     android:paddingTop="3dp"
     android:orientation="vertical"
     >
+
+    <Chronometer
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/chronometer"
+        android:layout_gravity="right" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
